Bug 514907 - Cloning a panel to another screen makes Global Menu think its on another screen
Summary: Cloning a panel to another screen makes Global Menu think its on another screen
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 6.5.5
Platform: CachyOS Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2026-01-21 17:17 UTC by Nathan
Modified: 2026-01-26 15:29 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
Recording of the bug in action (3.70 MB, video/mp4)
2026-01-21 17:51 UTC, Nathan
Details
Killing and restarting the plasmashell process makes the issue disappear (1.26 MB, video/mp4)
2026-01-21 17:51 UTC, Nathan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nathan 2026-01-21 17:17:11 UTC
SUMMARY
When cloning a panel that contains a Global Menu widget to another display, the new Global Menu widget only shows the menu for apps on the screen it was cloned from.

This seems to be an issue specific to the Global Menu as I also tested it with the Icons-Only Task Manager set to only show tasks on the current screen, and its state did not persist after cloning.

This bug doesn't persist after restarting Plasmashell.

STEPS TO REPRODUCE
1. Create panel with Global Menu widget
2. Enter Edit Mode and clone panel to another display
3. Focus app with Global Menu support on original screen

OBSERVED RESULT
Global Menus are shown on both screens

EXPECTED RESULT
Global Menus only show for focused apps on their respective screen

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: CachyOS
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
Comment 1 Nathan 2026-01-21 17:51:10 UTC
Created attachment 188758 [details]
Recording of the bug in action
Comment 2 Nathan 2026-01-21 17:51:54 UTC
Created attachment 188759 [details]
Killing and restarting the plasmashell process makes the issue disappear
Comment 3 David Redondo 2026-01-22 13:40:36 UTC
I see the the applets are first instantiated and then the panel is assigned to a screen.

Plasmoid.screenGeometry is not updated.
Comment 4 Bug Janitor Service 2026-01-22 15:14:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1419
Comment 5 David Redondo 2026-01-26 15:19:34 UTC
Git commit fb7edcc6afd6b487c90545cf25d5ba85c285607b by David Redondo.
Committed on 26/01/2026 at 12:54.
Pushed by davidre into branch 'master'.

Fix PlasmoidItem not emitting screenGeometryChanged signals when changing screens

Corona emits screenGeometryChanged really only when the geometry of the
screen changes. Since PlasmoidItem::screenGeometry is forwarding
the property of the containment we should also connect to the signal
of the containment.
Notably the signal is now emitted when the containment screen changes.
FIXED-IN: 6.6.0

M  +1    -5    src/plasmaquick/plasmoid/plasmoiditem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/fb7edcc6afd6b487c90545cf25d5ba85c285607b
Comment 6 David Redondo 2026-01-26 15:29:14 UTC
Git commit 4fd218a9da31a96b054aaf4ea3e5d9c4889b0ba4 by David Redondo.
Committed on 26/01/2026 at 15:22.
Pushed by davidre into branch 'Plasma/6.6'.

Fix PlasmoidItem not emitting screenGeometryChanged signals when changing screens

Corona emits screenGeometryChanged really only when the geometry of the
screen changes. Since PlasmoidItem::screenGeometry is forwarding
the property of the containment we should also connect to the signal
of the containment.
Notably the signal is now emitted when the containment screen changes.
FIXED-IN: 6.6.0

M  +1    -5    src/plasmaquick/plasmoid/plasmoiditem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/4fd218a9da31a96b054aaf4ea3e5d9c4889b0ba4