Fix PlasmoidItem not emitting screenGeometryChanged signals when changing screens

Corona emits screenGeometryChanged really only when the geometry of the
screen changes. Since PlasmoidItem::screenGeometry is forwarding
the property of the containment we should also connect to the signal
of the containment.
Notably the signal is now emitted when the containment screen changes.
BUG: 514907
FIXED-IN: 6.6.0